Better error handling and some bug fixes

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -5647,7 +5647,7 @@
 						Debug.log("Note: There was a change to the active Context group (check the top of the page)!",
 							Debug.INFO_PRIORITY);
 					else //must have been an activation
-						Debug.log("Note: There was a successful activation of a group (likely from a different GUI, check the System View for changes)!",
+						Debug.log("Note: There was a successful activation of a group (check the System View for changes)!",
 							Debug.INFO_PRIORITY);
 
 					//Debug.log(_OTS_RELAUNCH_STR,Debug.INFO_PRIORITY);
