--- a/WebGUI/html/SystemStatus.html
+++ b/WebGUI/html/SystemStatus.html
@@ -19,7 +19,7 @@
 
 		<!-- Header ------------------>
 		<div id='headerDiv' style="">
-			<h1 style="text-align:center">Application Status</h1>
+			<h1 style="text-align:center"><a href='#' onclick='init();' style='text-decoration:none; color:inherit;'>Application Status</a></h1>
 
 			<div id='lastUpdateTimeDiv'></div>
 
