added live button, sequence changes have been started, added semi colon

--- a/WebGUI/html/FEMacroTest.html
+++ b/WebGUI/html/FEMacroTest.html
@@ -1136,8 +1136,8 @@
 			// fill the history module
 			if (verticalOrientation_)
 			{
-				loadHistory()
-				loadSequnces()
+				loadHistory();
+				loadSequnces();
 			}
 			
 		} //end redraw()
@@ -1847,16 +1847,6 @@
 				"",
 				true);
 
-			//str += DesktopContent.htmlOpen(
-			//	"button",
-			//	{
-			//		"id": "liveViewBtn",
-			//		"onClick": "toggleLiveView()",
-			//	},
-			//	"Live View",
-			//	true);
-			
-			// add the clear history button
 			str += DesktopContent.htmlOpen(
 				"button",
 				{
