--- a/WebGUI/html/FEMacroTest.html
+++ b/WebGUI/html/FEMacroTest.html
@@ -282,11 +282,11 @@
 			}
 			var windowTooltip = "Welcome to the FE Macros web app!\n\n" + 
 				"This app provides an interface for devices configured in the context. " +
-				"It allows for common functions such as resets and reading and writing to memory. . " +
+				"It allows for common functions such as resets and reading and writing to memory. " +
 				"\n\n" +
-				"Choose a FE type (e.g., CFO, DTC, or ROC) to access functionalities. " +
+				"Choose a Front-End (FE) type (i.e. this should match your FE plugin class name) to access functionalities. " +
 				"Alternatively, you can handpick a subset of devices for more granular control by selecting <b>FE Target UID</b> or <b>toggle Multi-select</b>. " +
-				"Once you've chosen your FE type and target(s), select the Front-End (FE) Macro name, and hit <b>Run</b> to execute. " +
+				"Once you've chosen your FE type and target(s), select the FE Macro name, and hit <b>Run</b> to execute. " +
 				"The FE Macro will only run one time and on the devices specified. " + 
 				"For more information about a FE Macro click on the tooltip icon below the FE Macro name. " + 
 				"\n\n" +
@@ -297,8 +297,8 @@
 				"\n\n" +
 				"Clicking on <b>Sequence Mode</b> on the top left corner will open a fourth panel. Here, users can create an alias for a sequence of previously ran FE Macros. " 
 
-			DesktopContent.tooltip("FE Macros Introduction",windowTooltip);
-			DesktopContent.setWindowScrollTop(windowTooltip);
+			DesktopContent.tooltip("FE Macros Introduction", windowTooltip);
+			DesktopContent.setWindowTooltip(windowTooltip);
 			
 			Debug.closeErrorPop(); //close any debug pop-ups to start a blank slate 
 			Debug.log("feMacroTest init ");
