Allow App Status window to report sub-component status

--- a/WebGUI/html/SystemStatus.html
+++ b/WebGUI/html/SystemStatus.html
@@ -36,7 +36,7 @@
 			<h2 style="margin-left:10px">Filters</h2>
 
 			<!-- Context Filter List ------------------>
-			<button class="collapsible">Parent Context Name
+			<button class="collapsible filterHeader">Parent Context Name
 				<span class="helptext">Click to expand</span>
 			</button>
 			<div class="filterList" id="contextFilter">
@@ -45,7 +45,7 @@
 			</div>
 
 			<!-- Class Filter List ------------------>
-			<button class="collapsible" >App Type
+			<button class="collapsible filterHeader" >App Type
 				<span class="helptext">Click to expand</span>
 			</button>
 			<div class="filterList" id="classFilter">
@@ -54,7 +54,7 @@
 			</div>
 		
 			<!-- Hostname Filter List ------------------>		
-			<button class="collapsible">App Hostname
+			<button class="collapsible filterHeader">App Hostname
 				<span class="helptext">Click to expand</span>
 			</button>
 			<div class="filterList"  id="hostnameFilter">
