Sequence Mode with pause and halt features

--- a/WebGUI/html/FEMacroTest.html
+++ b/WebGUI/html/FEMacroTest.html
@@ -2970,8 +2970,8 @@
 			stopSequenceFlag = true;
 			pauseSequenceFlag = false;
 			isSequenceRunning = false;
-			currentIndex = 0; // Reset the currentIndex to start from the beginning
-			statusActionButtons(false); // Update UI elements accordingly
+			currentIndex = 0; 
+			statusActionButtons(false);
 		}
 
 		function updateRunButtonState() 
