Sequence Mode with pause and halt features

--- a/WebGUI/html/FEMacroTest.html
+++ b/WebGUI/html/FEMacroTest.html
@@ -2972,6 +2972,7 @@
 			isSequenceRunning = false;
 			currentIndex = 0; 
 			statusActionButtons(false);
+			updateCurrentMacroDisplay("Halted", currentIndex, 0); 
 		}
 
 		function updateRunButtonState() 
